<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingHorizontal="15sp">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/computationLine"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/calculation"
        android:textSize="25sp"/>
    <LinearLayout
        android:id="@+id/clearLine"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="85dp">

        <Button
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:text="@string/clear"
            />
        <Button
            android:layout_width="176dp"
            android:layout_height="match_parent"
            android:text="@string/backspace"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/firstLine"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@id/clearLine"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/Seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Seven"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/Eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Eight"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/Nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Nine"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/division"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLine"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@id/firstLine"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/Four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Four"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/Five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Five"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/Six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Six"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multiplication"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLine"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@id/secondLine"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/One"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/One"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/Two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Two"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/Three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Three"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/subtraction"
            android:textSize="35sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthLine"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@id/thirdLine"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/Zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Zero"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/Dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Dot"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/Negative"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Negative"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/addition"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/Enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fourthLine"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#e91d1d"
        android:text="@string/Enter"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>

</RelativeLayout>